# paperclip

./: Cargo.toml  actix-plugin.html  aliases.js  build-script.html  cli.html  examples.html  index.html  search-index.js  search_index.json  settings.html  source-files.js
core/: Cargo.toml
core/src/: lib.rs
core/src/v2/: mod.rs  models.rs
implementors/failure/: trait.Fail.js
macros/: Cargo.toml
macros/src/: core.rs  lib.rs
openapi/: Cargo.toml
openapi/src/: lib.rs
paperclip/: all.html  enum.PaperClipError.html  index.html
paperclip/v2/: fn.from_reader.html  index.html  sidebar-items.js  struct.EmitterState.html  trait.Emitter.html
paperclip_actix/: all.html  index.html  sidebar-items.js  struct.App.html  struct.Resource.html  struct.Route.html  struct.Scope.html  trait.Mountable.html  trait.OpenApiExt.html
paperclip_actix/web/: fn.delete.html  fn.get.html  fn.head.html  fn.method.html  fn.options.html  fn.patch.html  fn.post.html  fn.put.html  fn.resource.html  fn.scope.html  fn.service.html  fn.to.html  fn.to_async.html  index.html  sidebar-items.js  struct.Bytes.html  struct.BytesMut.html  struct.Data.html  struct.Form.html  struct.FormConfig.html  struct.HttpRequest.html  struct.HttpResponse.html  struct.Json.html  struct.JsonConfig.html  struct.Path.html  struct.PathConfig.html  struct.Payload.html  struct.PayloadConfig.html  struct.Query.html  (+5 more)
paperclip_actix_macros/: all.html  attr.api_v2_operation.html  attr.api_v2_schema.html  index.html  sidebar-items.js
paperclip_macros/: all.html  attr.api_v2_schema.html  index.html  sidebar-items.js
(+79 files in other folders)
