[package]
name = "paperclip-core"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"

[dependencies]
actix-http = { version = "0.2.6", optional = true }
lazy_static = "1.3"
paperclip-macros = { path = "../macros", version = "0.2.0" }
serde = "1.0"
parking_lot = "0.9"
regex = "1.1"

[features]
actix = ["default", "actix-http"]
default = ["v2", "paperclip-macros/default"]
v2 = ["paperclip-macros/v2"]
